--- a/style.css
+++ b/style.css
@@ -27,3 +27,216 @@ body {
   align-items: center;
   height: 100vh;
 }
+
+/*** rating box **************/
+.rating-box {
+  width: 30rem;
+  height: 30rem;
+  max-width: 100%;
+  background-color: var(--neutral4);
+  padding: 0.5rem;
+  border-radius: 15px;
+  margin: auto;
+  aspect-ratio: 1/1;
+}
+
+/**Rating content *************/
+.rating-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.rating-content .cell {
+  flex: 1;
+}
+/*** star image  *****************/
+.image {
+  width: 45px;
+  height: 45px;
+  margin-top: 1.4rem;
+  margin-left: 1rem;
+  border-radius: 50%;
+  text-align: center;
+  background-color: rgb(0, 0, 0, 0.2);
+}
+.image img {
+  margin-top: 0.86rem;
+}
+/*** Rating text ********************/
+.intro {
+  flex: 2;
+}
+.intro .text {
+  color: var(--neutral1);
+  margin-left: 2rem;
+  margin-top: 1.2rem;
+  font-size: 1rem;
+}
+.intro .text h2 {
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+.intro .text p {
+  line-height: 1.5;
+  font-weight: 400;
+}
+
+/*** Rates  ***********************/
+.rates {
+  text-align: center;
+}
+.rate-levels {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  margin: 1rem auto;
+  gap: 1rem;
+}
+.rate-levels .level {
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  text-align: center;
+  background-color: rgb(0, 0, 0, 0.2);
+  color: var(--neutral2);
+  margin-top: 1rem;
+  padding: 0.8rem;
+  font-size: 1.1rem;
+  font-weight: 400;
+  text-align: center;
+  cursor: pointer;
+}
+.rate-levels .level:hover {
+  background-color: var(--primary1);
+  color: var(--neutral1);
+}
+/*** Submit button *************/
+.submit {
+  text-align: center;
+}
+
+#submit {
+  width: 20rem;
+  padding: 1rem;
+  margin: 1rem auto;
+  border-radius: 50px;
+  color: var(--neutral1);
+  background-color: var(--primary1);
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  cursor: pointer;
+}
+#submit:hover {
+  background-color: var(--neutral1);
+  color: var(--primary1);
+}
+
+
+/****Modal  ********************/
+.modal {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: var(--neutral5);
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: none;
+}
+.modal-content {
+  width: 30rem;
+  height: 30rem;
+  max-width: 100%;
+  background-color: var(--neutral4);
+  padding: 1rem;
+  border-radius: 15px;
+  margin: 5rem auto;
+  aspect-ratio: 1/1;
+}
+.flex {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--neutral1);
+}
+.flex .cell {
+  flex: 1;
+}
+
+.modal-image img {
+  margin-top: 3rem;
+}
+.out-of {
+  background-color: rgb(0, 0, 0, 0.2);
+  width: 70%;
+  margin: auto;
+  border-radius: 50px;
+  padding: 1rem;
+}
+.out-of span {
+  color: var(--primary1);
+}
+.thanking {
+  flex: 2;
+}
+.thanking h2 {
+  margin: 1rem 0;
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+.thanking p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--neutral2);
+  width: 22rem;
+  max-width: 100%;
+}
+.rate-levels .changeStyle {
+  color: var(--neutral1);
+  background-color: var(--neutral2);
+}
+
+
+
+/**Media Queries*/
+@media screen and (max-width: 600px) {
+  .rating-box,
+  .modal-content {
+    width: 25rem;
+    height: 25rem;
+    width: 90%;
+    margin: auto;
+  }
+  .intro .text {
+    margin-left: 1rem;
+  }
+  .rate-levels {
+    margin:  auto;
+  }
+  .modal-content {
+    margin: 5rem auto;
+  }
+  .image {
+    margin-top: 1rem;
+  }
+  .image img {
+    margin-top: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (min-height: 1024px) {
+  body {
+    height: 70vh;
+  }
+}
